# ga_img_copy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ga_img_copy/: fitness.py  genetic_algorithm.py  genome.py  main.py  renderer.py
