[project]
authors = [{name = "Owen Lamont", email = "owenrlamont@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "ga_img_copy"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ga_img_copy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
typer = ">=0.14.0,<0.15"
rich = ">=13.9.4,<14"
mpire = ">=2.10.2,<3"
scikit-image = ">=0.24.0,<0.25"
pillow = ">=11.0.0,<12"
numpy = ">=2.1.3,<3"
pixi-pycharm = ">=0.0.8,<0.0.9"
